1998-08-14  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Bump version number to 1.10.0.1.

Thu Aug 13 11:15:24 1998  Noel Cragg  <noel@swish.red-bean.com>

	* version.c: Change version number to 1.10 and name to `Halibut'.

	* sanity.sh (rcslib): new tests to check behavior of symlinks in
 	the repository.

Wed Aug 12 15:39:38 1998  Noel Cragg  <noel@swish.red-bean.com>

	* main.c (lookup_command_attribute): the `annotate' command
 	shouldn't require access to the repository.  Add comment about
 	commands that do not use the working directory.

Mon Aug 10 10:26:38 1998  Noel Cragg  <noel@swish.red-bean.com>

	* version.c: Change version number to 1.9.30.

Thu Aug  6 17:44:50 1998  Noel Cragg  <noel@swish.red-bean.com>

	* server.c (serve_rdiff): change the name of the command (for
 	error reporting, etc.) from "patch" to "rdiff."
	(serve_remove): rename from "cvsremove" to "remove."

	* main.c (lookup_command_attribute): the `rdiff' command shouldn't
 	require write access to the repository.

1998-08-06  David Masterson of kla-tencor.com
	and Jim Kingdon

	* commit.c (commit_filesdoneproc): Don't call strlen ("CVSROOT")
	from within the assert statement.  Apparently HP's cc compiler on
	HPUX 10.20 has trouble with that.

1998-08-06  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_checkin): When adding branch, if there is a lock on
	the branchpoint owned by someone else, leave it alone.  This
	restores CVS 1.9 (RCS 5.7) behavior, fixing a core dump.
	* sanity.sh (reserved): New tests reserved-16 through reserved-19
	test for this fix.

1998-08-05  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (unedit-without-baserev): Use ${QUESTION} not "?".
	This makes it work with GNU expr 1.12 as well as 1.16.

Sun Aug  2 20:27:44 1998  Noel Cragg  <noel@swish.red-bean.com>

	* mkmodules.c: add comment about TopLevelAdmin for the initial
 	contents of CVSROOT/config.

1998-07-29  Jim Kingdon  <kingdon@harvey.cyclic.com>
